Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8171528/DuplicatedAnnotatedPackagesTest.out
package-info.java:3:9: compiler.warn.pkg-info.already.seen: test
package-info.java:2:1: compiler.err.already.annotated: kindname.package, test
1 error
1 warning
