Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8171528/DuplicatedAnnotatedPackagesTest.java
/*
 * @test  /nodynamiccopyright/
 * @bug 8171528
 * @summary Crash in Annotate with duplicate package-info declarations
 * @compile/fail/ref=DuplicatedAnnotatedPackagesTest.out -XDrawDiagnostics pkg1/package-info.java pkg2/package-info.java
 */
